Adds the Firebase/Auth pod

--- a/Wijnderlust/Base.lproj/Main.storyboard
+++ b/Wijnderlust/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
         <!--Third-->
         <scene sceneID="Bm7-nh-RI5">
             <objects>
-                <viewController title="Third" id="tMp-jh-2RC" customClass="ThirdViewController" sceneMemberID="viewController">
+                <viewController title="Third" id="tMp-jh-2RC" customClass="ThirdViewController" customModule="Wijnderlust" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RWu-Mc-zVf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
