--- a/Wijnderlust/Base.lproj/Main.storyboard
+++ b/Wijnderlust/Base.lproj/Main.storyboard
@@ -1113,11 +1113,13 @@
             <objects>
                 <navigationController title="Inspiration Navigation Controller" id="CvJ-U3-6G3" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Inspiration" image="Inspiration" id="dg3-6L-wmU"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="mE5-lJ-dGJ">
-                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                    <navigationBar key="navigationBar" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mE5-lJ-dGJ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                            <color key="textColor" red="0.18039215689999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <connections>
@@ -1295,6 +1297,7 @@
                                     <outlet property="venueRating" destination="66l-Aj-Vs9" id="doz-Z1-9vY"/>
                                     <outlet property="wineStatusImage" destination="UJv-Wt-3lS" id="7tZ-gT-wFn"/>
                                     <outlet property="wineStatusLabel" destination="sUg-7S-5SU" id="O6m-Mj-bs8"/>
+                                    <segue destination="wQ7-XM-KRE" kind="show" identifier="showVenue" id="YA2-wK-naU"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -1308,6 +1311,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FND-FT-Oy4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="736.79999999999995" y="394.45277361319341"/>
+        </scene>
+        <!--Venue Interior Controller-->
+        <scene sceneID="syT-jt-TQR">
+            <objects>
+                <tableViewController id="wQ7-XM-KRE" customClass="VenueInteriorController" customModule="Wijnderlust" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sDv-Rj-9TO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <imageView key="tableHeaderView" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" id="MIk-b6-iKl" userLabel="Venue Photo">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="225"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="G4m-gq-C4u">
+                                <rect key="frame" x="0.0" y="253" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="G4m-gq-C4u" id="bVK-1j-nCn">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="wQ7-XM-KRE" id="LrB-JQ-zZ8"/>
+                            <outlet property="delegate" destination="wQ7-XM-KRE" id="dga-KW-auM"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="venuePhoto" destination="MIk-b6-iKl" id="Ldr-Wa-rrP"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pxa-Si-tnX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="737" y="1155"/>
         </scene>
         <!--Main Nav Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -1352,6 +1390,7 @@
         <image name="Profile" width="88" height="88"/>
         <image name="SplashBG" width="414" height="736"/>
         <image name="SplashLogo" width="236" height="64"/>
+        <image name="placeholder" width="787" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="1fO-Tv-BKH"/>
